--- a/cv/resume_zh.tex
+++ b/cv/resume_zh.tex
@@ -79,20 +79,20 @@
 
 \section{工作内容}
 
-\tldatecventry{2014.10}{}{算法模型开发}{LR/Spark}{python,spark}{%
+\tldatecventry{2014.10}{算法模型开发}{}{LR/Spark}{python,spark}{%
 \begin{tightitemize}
  \item ~迁移算法程序到Spark
  \item ~共4人负责算法模型, 使用python语言开发, 个人负责样本生成模块.
  \item ~LR模型, 由liblinear迁移spark完毕,工程持续越1个月. AUC保持在0.71
 \end{tightitemize}}
 
-\tldatecventry{2014.8}{}{后台开发}{广告后台}{C/C++, python HTTP}{%
+\tldatecventry{2014.8}{后台开发}{}{广告后台}{C/C++, python HTTP}{%
 \begin{tightitemize}
  \item ~维护当当单品页面广告后台服务
  \item ~带领另外1人, 重构部分代码.
 \end{tightitemize}}
 
-\tldatecventry{2012.2}{}{后台开发}{推荐后台}{C/C++, golang HTTP}{%
+\tldatecventry{2012.2}{后台开发}{}{推荐后台}{C/C++, golang HTTP}{%
 \begin{tightitemize}
  \item 2012-2013 推荐系统后台服务的开发和维护, 使用c/c++, 基于Libevhtp架构.
  \item 2012-2013 设计实现了基于Redis的商品实时数据API服务, QPS 5000左右,
@@ -108,7 +108,7 @@
 \end{tightitemize}
 }
 
-\tldatecventry{2011.6}{}{数据报表相关}{Hadoop后台}{python}{%
+\tldatecventry{2011.6}{大数据开发}{}{Hadoop后台}{python}{%
 \begin{tightitemize}
  \item 之后主要负责大数据相关基础数据生成
  \item 当当用户的点击浏览数据统计,由log数据生成树形结构, 为算法提供基础行为数据.
