small fix of date.

--- a/cv/resume_zh.tex
+++ b/cv/resume_zh.tex
@@ -33,7 +33,7 @@
 }
 
 \myquote{工作以来常用python和c语言. 在当当工作3年, 主要工作为服务器端开发,
-有大数据工具使用经验, 重构过当当网推荐后台和广告后台,有少量机器学习工作}
+有大数据工具使用经验,  维护并重构当当网推荐后台及其他系统,有少量机器学习工作}
 {}
 %\myquote{踏实做人}{liangchengming}
 
@@ -59,16 +59,7 @@
 %\devnotes{Developer}{Contributor}
 
 \section{教育和经历}
-\tlcventry{2012}{0}{北京当当网信息技术有限公司}{营销系统开发部}{推荐算法}{开发工程师} {%
-}
-
-\tlcventry{2012}{0}{北京当当网信息技术有限公司}{营销系统开发部}{广告联盟}{开发工程师} {%
-}
-
-\tlcventry{2012}{0}{北京当当网信息技术有限公司}{营销系统开发部}{个性化推荐组}{开发工程师} {%
-}
-
-\tlcventry{2012}{0}{北京当当网信息技术有限公司}{营销系统开发部}{大数据组}{开发工程师} {%
+\tlcventry{2012}{0}{北京当当网信息技术有限公司}{营销系统开发部}{个性化推荐和算法组}{开发工程师} {%
 }
 
 \tlcventry{2009}{2012}{北京航空航天大学}{NLSDE国家重点实验室}{计算机技术}{硕士学位} {%
@@ -92,7 +83,7 @@
  \item ~带领另外1人, 重构部分代码.
 \end{tightitemize}}
 
-\tldatecventry{2012.2}{后台开发}{}{推荐后台}{C/C++, golang HTTP}{%
+\tldatecventry{2013.2}{后台开发}{}{推荐后台}{C/C++, golang HTTP}{%
 \begin{tightitemize}
  \item 2012-2013 推荐系统后台服务的开发和维护, 使用c/c++, 基于Libevhtp架构.
  \item 2012-2013 设计实现了基于Redis的商品实时数据API服务, QPS 5000左右,
@@ -108,14 +99,14 @@
 \end{tightitemize}
 }
 
-\tldatecventry{2011.6}{大数据开发}{}{Hadoop后台}{python}{%
+\tldatecventry{2012.6}{大数据开发}{}{Hadoop后台}{python}{%
 \begin{tightitemize}
  \item 之后主要负责大数据相关基础数据生成
  \item 当当用户的点击浏览数据统计,由log数据生成树形结构, 为算法提供基础行为数据.
  \item 后交付他人维护.数据每日更新, 供推荐流程使用至今.
 \end{tightitemize}}
 
-\tldatecventry{2011.2}{单点登陆}{内部系统}{}{Java/LDAP}{%
+\tldatecventry{2012.2}{单点登陆}{内部系统}{}{Java/LDAP}{%
 \begin{tightitemize}
  \item 入职当当网之后的第一份工作为整合内部各个子系统的入口, 做单点登陆.
  \item 设计方案,并实现了基于SSL验证的统一登陆接口(Java),供所有子系统调用.(基于LDAP协议)
